# TDS-P2

./: .env.example  API_README.md  Dockerfile  LLM_CONTENT_ANALYSIS.md  README.md  Tasktypes.txt  app.py  data_processor.py  enhanced_data_processor.py  project_desc.md  pyproject.toml  quiz_solver.py  requirements.txt  send_request.py  setup_env.sh  test_aipipe.py  test_live_app.py  ultimate_quiz_solver.py
code/: .env.example  .gitignore  PROMPTS.md  visualization.py
components/: __init__.py  capability_registry.py  data_analyzer.py  fallback_strategies.py  llm_client.py  quiz_solver.py  report_builder.py  transcriber.py  vision.py  visualization.py  web_scraper.py
docs/: CODE_README.md  DUCKDB_GUIDE.md  FASTAPI_MIGRATION.md  IMPLEMENTATION.md  REQUIREMENTS_COMPARISON.md  code_readme.md  deployment_guide.md  duckdb_guide.md  implementation.md  quick_reference.md  quiz_solver_loop_and_logging.md
test/: README.md  mock_quiz_server.py  mock_server_guide.md  test_api.py  test_complete_flow.py  test_data_processor.py  test_live_app.py  test_mock_server.py
